2003-04-02  Bradley Bell  <btb@icculus.org>

	* main/wall.c: don't die when trying to toggle nonexistent
	segment... vertigo level 10 is buggy!

	* main/gamemine.c: comments/formatting

2003-03-31  Micah J. Lieske  <MicahJon@compuserve.com>

	* arch/dos/digimm.c, arch/sdl/digi.c, arch/win32/digi.c,
	main/inferno.c: Allow use of 22K sound samples

2003-03-29  Bradley Bell  <btb@icculus.org>

	* arch/ogl/gr.c: default to bitmapped reticle

	* main/bm.c, main/endlevel.c, main/piggy.c, main/piggy.h,
	main/polyobj.c: rewrote endlevel stuff to reread exit model info
	every time

	* arch/sdl/joy.c: fixed text seen for hats in control config
	screen

2003-03-28  Bradley Bell  <btb@icculus.org>

	* main/bm.c: heh, model nums in vertigo are hardcoded,
	N_D2_POLYGON_MODELS can't change

	* configure.ac, include/d1x.xpm, include/descent.xpm,
	arch/ogl/sdlgl.c, arch/sdl/gr.c: enabled setting icon with
	SDL_image

2003-03-27  Bradley Bell  <btb@icculus.org>

	* main/text.h: fixed text references for hat directions

	* arch/ogl/Makefile.am: oops, can't get rid of main INCLUDE yet...

2003-03-26  Bradley Bell  <btb@icculus.org>

	* main/playsave.c: make d2x keys backward compatible

2003-03-26  Micah J. Lieske  <MicahJon@compuserve.com>

	* arch/sdl/event.c, arch/sdl/joy.c: added hat support for sdl
	joysticks

2003-03-26  Bradley Bell  <btb@icculus.org>

	* main/piggy.c: fix crash when d1 data not present

	* main/gamecntl.c, main/kconfig.c, main/playsave.c: fix d2x keys,
	read/write from plr file

	* main/ai.h, main/collide.c, main/escort.c, main/escort.h,
	main/fuelcen.c, main/gamecntl.c, main/playsave.c, main/powerup.c:
	added escort.h header

2003-03-25  Bradley Bell  <btb@icculus.org>

	* main/bm.c, main/piggy.c, main/piggy.h, main/gameseq.c: added
	D1_PIGFILE ("descent.pig") macro

	* main/bm.c, main/piggy.c, main/piggy.h: ability to load exit
	models from d1 pig file

	* main/bm.c, main/bm.h, main/endlevel.c, main/piggy.c,